--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "redis": "^3.0.2",
     "redux": "^4.0.5",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
